# pandora_RoCKIn2014

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/rec_msg_and_serv/: rec.h  recRequest.h  recResponse.h
devel/include/soc_msg_and_serv/: segment_and_classify.h  segment_and_classifyRequest.h  segment_and_classifyResponse.h
devel/lib/object_classification/: soc_test_node
devel/lib/object_recognition/: rec_node  rec_test_node
devel/lib/pkgconfig/: object_classification.pc  object_recognition.pc  rec_msg_and_serv.pc  soc_msg_and_serv.pc
devel/lib/python2.7/dist-packages/soc_msg_and_serv/srv/: __init__.py  _segment_and_classify.py
devel/share/common-lisp/ros/rec_msg_and_serv/srv/: _package_rec.lisp
devel/share/common-lisp/ros/soc_msg_and_serv/srv/: _package.lisp  _package_segment_and_classify.lisp  segment_and_classify.lisp  soc_msg_and_serv-srv.asd
devel/share/object_classification/cmake/: object_classificationConfig.cmake
devel/share/object_recognition/cmake/: object_recognitionConfig.cmake
devel/share/rec_msg_and_serv/cmake/: rec_msg_and_serv-msg-paths.cmake  rec_msg_and_servConfig.cmake
devel/share/soc_msg_and_serv/cmake/: soc_msg_and_serv-msg-extras.cmake  soc_msg_and_serv-msg-paths.cmake  soc_msg_and_servConfig.cmake
src/object_classification/: CMakeLists.txt
src/object_classification/launch/: allanodes.launch  shape_simple_classifier.launch  soc_test.launch
src/object_classification/src/shape_simple_classifier/: shape_simple_classifier_node.cpp
src/object_recognition/: CMakeLists.txt  package.xml
src/object_recognition/launch/: allnodes.launch  rec.launch  rec_test.launch  usbCam.launch
src/object_recognition/models/: can2_149f.sift  new_musli_351.sift
src/object_recognition/src/rec/: rec_node-sav.cpp  rec_node.cpp  recognizer.cpp
src/object_recognition/src/rec_test/: main.cpp
src/object_recognition_msg/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/object_recognition_msg/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
src/object_recognition_msg/devel/include/rec_msg_and_serv/: rec.h  recRequest.h  recResponse.h
src/object_recognition_msg/devel/lib/pkgconfig/: rec_msg_and_serv.pc
src/object_recognition_msg/devel/lib/python2.7/dist-packages/rec_msg_and_serv/srv/: __init__.py  _rec.py
src/object_recognition_msg/devel/share/common-lisp/ros/rec_msg_and_serv/srv/: _package.lisp  rec.lisp  rec_msg_and_serv-srv.asd
src/object_recognition_msg/devel/share/rec_msg_and_serv/cmake/: rec_msg_and_serv-msg-extras.cmake  rec_msg_and_servConfig.cmake
src/ply_models/: can2.sift  mayonnaise.ply  new_muesli.ply
